--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "concurrently": "^7.1.0",
+    "eslint": "^8.12.0",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0"
+    "prettier": "^2.6.2",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8"
   },
   "scripts": {
     "build": "tsc",
-    "start:ts": "tsc -w",
-    "start:js": "nodemon --watch dist",
-    "start": "echo http://localhost:3000/ && sleep 1 && concurrently yarn:start:*"
+    "dev": "yarn tsnd --respawn src/index.ts"
   }
 }
