--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@types/node": "^17.0.23",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "typescript": "^4.6.3"
   },
