--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.23",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "near-api-js": "^0.44.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
