--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "@types/node": "^17.0.23",
+    "algosdk": "^1.15.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "near-api-js": "^0.44.2",
