--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "concurrently": "^7.1.0",
     "eslint": "^8.12.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "yarn tsnd --respawn src/index.ts"
+    "dev": "yarn tsnd --respawn src/index.ts",
+    "test": "jest"
   }
 }
