feat: create ASA goNEAR on testnet, id 83251085

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "yarn tsnd --respawn src/index.ts",
+    "dev": "yarn tsnd --respawn src/index.ts --inspect --debug",
     "test": "jest"
   }
 }
