--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "yarn tsnd --respawn src/index.ts --inspect --debug",
+    "dev": "NODE_ENV=development yarn tsnd --respawn src/index.ts --inspector --debug",
     "test": "jest"
   }
 }
