--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^17.0.23",
     "algosdk": "^1.15.0",
     "dotenv": "^16.0.0",
+    "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.3",
     "near-api-js": "^0.44.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "concurrently": "^7.1.0",
@@ -30,6 +32,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "NODE_ENV=development yarn tsnd --respawn src/index.ts --inspector --debug",
-    "test": "jest"
+    "test": "jest",
+    "test:algorand": "jest --testPathPattern=src/blockchain/algorand"
   }
 }
