--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/nedb": "^1.8.12",
     "concurrently": "^7.1.0",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
+    "nedb": "^1.8.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
