--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "winston": "^3.7.2"
   },
   "scripts": {
     "build": "tsc",
