--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.3",
     "near-api-js": "^0.44.2",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.4",
     "zod": "^3.14.4"
   },
   "description": "Unidirectional bridge for Algorand <- NEAR",
@@ -16,8 +16,10 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/pg": "^8.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "concurrently": "^7.1.0",
-    "eslint": "^8.12.0",
+    "eslint": "^8.14.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
@@ -49,5 +51,6 @@
     "test:mint": "jest --testPathPattern=src/blockchain/bridge/mint ",
     "test:near": "jest --testPathPattern=src/blockchain/near",
     "test:util": "jest --testPathPattern=src/utils -w=1 #serialize bigint"
-  }
+  },
+  "version": "1.0.0"
 }
