--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "description": "Unidirectional bridge for Algorand <- NEAR",
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
