--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "json-bigint": "^1.0.0",
+    "lint-staged": "^12.4.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "prettier": "^2.6.2",
@@ -35,6 +36,10 @@
     "winston": "^3.7.2"
   },
   "license": "gpl-3.0",
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.{json,md}": "prettier --write"
+  },
   "main": "src/main.ts",
   "name": "algorand-near-bridge",
   "private": true,
