--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zod": "^3.14.4"
   },
   "description": "Unidirectional bridge for Algorand <- NEAR",
+  "devDependenciesComment": "json-bigint might not be needed",
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
@@ -44,13 +45,11 @@
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "concurrently": "^7.1.0",
     "eslint": "^8.14.0",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "json-bigint": "^1.0.0",
     "lint-staged": "^12.4.1",
-    "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
