docs(README): code style and atomNEAR

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["commitlint", "tsnd"]
+  "cSpell.words": [
+    "commitlint",
+    "EXAMPL",
+    "PGDATABASE",
+    "PGHOST",
+    "PGPASSWORD",
+    "PGPORT",
+    "PGUSER",
+    "tsnd"
+  ]
 }
