--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "algosdk": "^1.15.0",
     "dotenv": "^16.0.0",
     "dotenv-parse-variables": "^2.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
     "near-api-js": "^0.44.2",
     "typescript": "^4.6.4",
@@ -38,6 +39,7 @@
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
     "@types/dotenv-parse-variables": "^2.0.1",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/json-bigint": "^1.0.1",
