chore: use eslint strict rules, --fix with eslint

--- a/package.json
+++ b/package.json
@@ -68,6 +68,11 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": [
+        "./tsconfig.json"
+      ]
+    },
     "plugins": [
       "@typescript-eslint"
     ],
