ref: finish all types for typescript strict rules

--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     },
     "extends": [
       "eslint:recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended-requiring-type-checking",
+      "plugin:@typescript-eslint/strict"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
