ref: fix tests for typing

--- a/package.json
+++ b/package.json
@@ -118,20 +118,18 @@
     "algo": "yarn test:algo",
     "bridge": "yarn test:bridge",
     "build": "tsc",
-    "burn": "yarn test:burn",
+    "tx": "yarn test:transact",
     "db": "yarn test:db",
     "dev": "tsnd --respawn src/main.ts --inspector --debug",
     "lint": "eslint . --ext .ts",
-    "mint": "yarn test:mint",
     "near": "yarn test:near",
     "postinstall": "husky install",
     "prepare": "husky install",
     "test": "jest",
     "test:algo": "jest --testPathPattern=src/blockchain/algorand",
     "test:bridge": "jest --testPathPattern=src/bridge",
-    "test:burn": "jest --testPathPattern=src/bridge/burn",
+    "test:transact": "jest --testPathPattern=src/bridge/transact",
     "test:db": "jest --testPathPattern=src/database",
-    "test:mint": "jest --testPathPattern=src/bridge/mint",
     "test:near": "jest --testPathPattern=src/blockchain/near",
     "test:util": "jest --testPathPattern=src/utils"
   },
