chore: add `yarn int` with playwright setup+test

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "@playwright/test": "^1.22.2",
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
@@ -52,6 +53,7 @@
     "json-bigint": "^1.0.0",
     "lint-staged": "^12.4.1",
     "pg": "^8.7.3",
+    "playwright": "^1.22.2",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
@@ -118,22 +120,24 @@
     "algo": "yarn test:algo",
     "bridge": "yarn test:bridge",
     "build": "tsc",
-    "tx": "yarn test:transact",
     "db": "yarn test:db",
     "dev": "tsnd --respawn src/main.ts --inspector --debug",
-    "lint": "eslint . --ext .ts",
     "handler": "yarn test:handler",
+    "int": "yarn test:integration",
+    "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install",
     "prepare": "husky install",
-    "test": "jest",
+    "test": "jest --testPathIgnorePatterns=integration-test",
     "test:algo": "jest --testPathPattern=src/blockchain/algorand",
     "test:bridge": "jest --testPathPattern=src/bridge",
-    "test:transact": "jest --testPathPattern=src/bridge/transact",
     "test:db": "jest --testPathPattern=src/database",
+    "test:handler": "jest --testPathPattern=src/bridge/txn-handler",
+    "test:integration": "playwright test ./src/integration-test/",
     "test:near": "jest --testPathPattern=src/blockchain/near",
+    "test:transact": "jest --testPathPattern=src/bridge/transact",
     "test:util": "jest --testPathPattern=src/utils",
-    "test:handler": "jest --testPathPattern=src/bridge/txn-handler"
+    "tx": "yarn test:transact"
   },
   "type": "module",
   "version": "0.1.1"
