--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "db": "yarn test:db",
     "dev": "tsnd --respawn src/main.ts --inspector --debug",
     "handler": "yarn test:handler",
-    "int": "yarn test:integration",
+    "int": "yarn integration-test",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install",
@@ -133,7 +133,7 @@
     "test:bridge": "jest --testPathPattern=src/bridge",
     "test:db": "jest --testPathPattern=src/database",
     "test:handler": "jest --testPathPattern=src/bridge/txn-handler",
-    "test:integration": "playwright test ./src/integration-test/",
+    "integration-test": "playwright test ./src/integration-test/",
     "test:near": "jest --testPathPattern=src/blockchain/near",
     "test:transact": "jest --testPathPattern=src/bridge/transact",
     "test:util": "jest --testPathPattern=src/utils",
