--- a/package.json
+++ b/package.json
@@ -95,6 +95,10 @@
         "useESM": false
       }
     },
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/",
+      "<rootDir>/src/integration-test/"
+    ],
     "preset": "ts-jest",
     "setupFilesAfterEnv": [
       "./src/utils/test/global-beforeAll.ts"
@@ -124,16 +128,16 @@
     "dev": "tsnd --respawn src/main.ts --inspector --debug",
     "handler": "yarn test:handler",
     "int": "yarn integration-test",
+    "integration-test": "playwright test ./src/integration-test/",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install",
     "prepare": "husky install",
-    "test": "jest --testPathIgnorePatterns=integration-test",
+    "test": "jest",
     "test:algo": "jest --testPathPattern=src/blockchain/algorand",
     "test:bridge": "jest --testPathPattern=src/bridge",
     "test:db": "jest --testPathPattern=src/database",
     "test:handler": "jest --testPathPattern=src/bridge/txn-handler",
-    "integration-test": "playwright test ./src/integration-test/",
     "test:near": "jest --testPathPattern=src/blockchain/near",
     "test:transact": "jest --testPathPattern=src/bridge/transact",
     "test:util": "jest --testPathPattern=src/utils",
