--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
-    "@playwright/test": "^1.22.2",
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
@@ -53,7 +52,6 @@
     "json-bigint": "^1.0.0",
     "lint-staged": "^12.4.1",
     "pg": "^8.7.3",
-    "playwright": "^1.22.2",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
@@ -129,7 +127,7 @@
     "dev": "tsnd --respawn src/main.ts --inspector --debug",
     "handler": "yarn test:handler",
     "int": "yarn integration-test",
-    "integration-test": "playwright test ./src/integration-test/",
+    "integration-test": "jest ./src/integration-test/",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install",
