--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/node": "^17.0.23",
     "algosdk": "^1.15.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "dotenv-parse-variables": "^2.0.0",
     "ejs": "^3.1.8",
