--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.3",
     "near-api-js": "^0.44.2",
+    "object-set-type": "^2.2.1",
     "typescript": "^4.6.4",
     "zod": "^3.14.4"
   },
