chore: add script shortcut for util

--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
     "test:handler": "jest --testPathPattern=src/bridge/txn-handler",
     "test:integration": "jest --testPathPattern=src/test/integration-test",
     "test:near": "jest --testPathPattern=src/blockchain/near",
-    "test:util": "jest --testPathPattern=src/utils"
+    "test:util": "jest --testPathPattern=src/utils",
+    "util": "yarn test:util"
   },
   "version": "0.1.1"
 }
