--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     }
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.23",
     "algosdk": "^1.15.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.0",
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
     "near-api-js": "^0.44.2",
     "object-set-type": "^2.2.1",
     "typescript": "^4.6.4",
