chore: update pre-push hook for integration test

--- a/package.json
+++ b/package.json
@@ -134,7 +134,9 @@
     "prepare": "husky install",
     "pretest": "yarn pretest:integration",
     "pretest:integration": "echo 'should run `yarn dev` before running integration test'",
-    "test": "jest",
+    "start": "ts-node src/main.ts",
+    "start-c": "echo 'the start command needs change to PM2 or alternative'",
+    "unit-test": "jest --testPathIgnorePatterns=src/test",
     "test:algo": "jest --testPathPattern=src/blockchain/algorand",
     "test:bridge": "jest --testPathPattern=src/bridge",
     "test:db": "jest --testPathPattern=src/database",
