chore: remove jest redundant `--testPathPattern=`

--- a/package.json
+++ b/package.json
@@ -137,13 +137,13 @@
     "start": "ts-node src/main.ts",
     "start-c": "echo 'the start command needs change to PM2 or alternative'",
     "unit-test": "jest --testPathIgnorePatterns=src/test",
-    "test:algo": "jest --testPathPattern=src/blockchain/algorand",
-    "test:bridge": "jest --testPathPattern=src/bridge",
-    "test:db": "jest --testPathPattern=src/database",
-    "test:handler": "jest --testPathPattern=src/bridge/txn-handler",
-    "test:integration": "jest --testPathPattern=src/test/integration-test",
-    "test:near": "jest --testPathPattern=src/blockchain/near",
-    "test:util": "jest --testPathPattern=src/utils",
+    "test:algo": "jest src/blockchain/algorand",
+    "test:bridge": "jest src/bridge",
+    "test:db": "jest src/database",
+    "test:handler": "jest src/bridge/txn-handler",
+    "test:integration": "jest src/test/integration-test",
+    "test:near": "jest src/blockchain/near",
+    "test:util": "jest src/utils",
     "util": "yarn test:util"
   },
   "version": "0.1.1"
