chore: refactor pre-push hook with package script

--- a/package.json
+++ b/package.json
@@ -128,22 +128,23 @@
     "dev": "tsnd --respawn src/main.ts --inspector --debug",
     "handler": "yarn test:handler",
     "int": "yarn test:integration",
+    "integration-test": "yarn test:integration-test",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install",
     "prepare": "husky install",
-    "pretest": "yarn pretest:integration",
-    "pretest:integration": "echo 'should run `yarn dev` before running integration test'",
     "start": "ts-node src/main.ts",
     "start-c": "echo 'the start command needs change to PM2 or alternative'",
-    "unit-test": "jest --testPathIgnorePatterns=src/test",
+    "test": "yarn test:unit-test ; yarn test:integration-test",
     "test:algo": "jest src/blockchain/algorand",
     "test:bridge": "jest src/bridge",
     "test:db": "jest src/database",
     "test:handler": "jest src/bridge/txn-handler",
-    "test:integration": "jest src/test/integration-test",
+    "test:integration-test": "yarn start & jest src/test/integration-test ; pkill -f -n yarn start",
     "test:near": "jest src/blockchain/near",
+    "test:unit-test": "jest --testPathIgnorePatterns=src/test",
     "test:util": "jest src/utils",
+    "unit-test": "yarn test:unit-test",
     "util": "yarn test:util"
   },
   "version": "0.1.1"
