--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "test:unit-test": "jest --testPathIgnorePatterns=src/test",
     "test:util": "jest src/utils",
     "unit-test": "yarn test:unit-test",
+    "unit": "yarn test:unit-test",
     "util": "yarn test:util"
   },
   "version": "0.1.3"
