chore: add script `yarn doc` to gen TSDoc

--- a/package.json
+++ b/package.json
@@ -131,12 +131,13 @@
     "build": "tsc",
     "db": "yarn test:db",
     "dev": "tsnd --respawn src/main.ts --inspector --debug",
+    "doc": "yarn typedoc src/* --logLevel Error --out ./TSdoc",
     "handler": "yarn test:handler",
     "int": "yarn test:integration-test",
     "integration-test": "yarn test:integration-test",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
-    "postinstall": "husky install",
+    "postinstall": "husky install; yarn doc",
     "prepare": "husky install",
     "start": "ts-node src/main.ts",
     "test": "yarn test:unit-test ; yarn test:integration-test",
