--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.3",
     "lodash": "^4.17.21",
     "near-api-js": "^0.44.2",
+    "object-set-type": "^2.2.1",
     "typedoc": "^0.23.7",
     "typescript": "^4.6.4",
     "zod": "^3.14.4"
