--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^17.0.23",
     "algosdk": "^1.15.0",
     "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
     "dotenv": "^16.0.0",
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.3",
