chore: demote old integration test

--- a/package.json
+++ b/package.json
@@ -136,18 +136,20 @@
     "doc": "yarn typedoc src/* --logLevel Error --out ./TSDoc",
     "handler": "yarn test:handler",
     "int": "yarn test:integration-test",
+    "integration": "yarn test:integration-test",
     "integration-test": "yarn test:integration-test",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install; yarn doc",
     "prepare": "husky install",
     "start": "NODE_ENV=production ts-node src/main.ts",
-    "test": "yarn test:unit-test ; yarn test:integration-test",
+    "test": "yarn test:unit-test # disabled: ; yarn test:integration-test",
     "test:algo": "jest src/blockchain/algorand",
     "test:bridge": "jest src/bridge",
     "test:db": "jest src/database",
     "test:handler": "jest src/bridge/txn-handler",
     "test:integration-test": "yarn dev & jest src/test/integration-test ; pkill -fn yarn dev",
+    "test:integration-test-with-server": "yarn dev & jest src/test/integration-test ; pkill -fn yarn dev",
     "test:near": "jest src/blockchain/near",
     "test:unit-test": "jest --testPathIgnorePatterns=src/test",
     "test:util": "jest src/utils",
