--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "test:bridge": "jest src/bridge",
     "test:db": "jest src/database",
     "test:handler": "jest src/bridge/txn-handler",
-    "test:integration-test": "yarn dev & jest src/test/integration-test ; pkill -fn yarn dev",
+    "test:integration-test": "jest src/test/integration-test",
     "test:integration-test-with-server": "yarn dev & jest src/test/integration-test ; pkill -fn yarn dev",
     "test:near": "jest src/blockchain/near",
     "test:unit-test": "jest --testPathIgnorePatterns=src/test",
