fix: loose end on 4def850

--- a/package.json
+++ b/package.json
@@ -136,8 +136,7 @@
     "doc": "yarn typedoc src/* --logLevel Error --out ./TSDoc",
     "handler": "yarn test:handler",
     "int": "yarn test:integration-test",
-    "integration": "yarn test:integration-test",
-    "integration-test": "yarn test:integration-test",
+    "integration": "yarn test:integration-test-with-server",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install; yarn doc",
