chore: better names for integration-test
Co-authored-by: ailisp <bo@near.org>

--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "doc": "yarn typedoc src/* --logLevel Error --out ./TSDoc",
     "handler": "yarn test:handler",
     "int": "yarn test:integration-test",
-    "integration": "yarn test:integration-test-with-server",
+    "int:ci": "yarn test:integration-test-on-ci",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
     "postinstall": "husky install; yarn doc",
@@ -149,7 +149,7 @@
     "test:db": "jest src/database",
     "test:handler": "jest src/bridge/txn-handler",
     "test:integration-test": "jest src/test/integration-test",
-    "test:integration-test-with-server": "yarn dev & jest src/test/integration-test ; pkill -fn yarn dev",
+    "test:integration-on-ci": "yarn dev & jest src/test/integration-test ; pkill -fn yarn dev",
     "test:near": "jest src/blockchain/near",
     "test:unit-test": "jest --testPathIgnorePatterns=src/test",
     "test:util": "jest src/utils",
