wip cleanup api and db

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "algosdk": "^1.15.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.3",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "@types/cors": "^2.8.12",
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
@@ -139,8 +141,6 @@
     "int:ci": "yarn test:integration-test-on-ci",
     "lint": "eslint . --ext .ts",
     "near": "yarn test:near",
-    "postinstall": "husky install; yarn doc",
-    "preinstall": "git submodule init; git submodule update",
     "prepare": "husky install",
     "start": "NODE_ENV=production ts-node src/main.ts",
     "test": "yarn test:unit-test # disabled: ; yarn test:integration-test",
