--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/common"]
 	path = src/common
-	url = https://github.com/AbstrLabs/half-moon-cross-common.git
+	url = git@github.com:AbstrLabs/half-moon-cross-common.git
