--- a/database/package.json
+++ b/database/package.json
@@ -10,6 +10,7 @@
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "pg": "^8.7.3",
+    "yargs": "^17.5.1",
     "yesql": "^5.0.0"
   }
 }
