--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artificio-bridge-common": "file:../common",
+    "artificio-bridge-database": "file:../database",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "artificio-bridge-common": "file:../common",
-    "artificio-bridge-database": "file:../database"
+    "jsonschema": "^1.4.1"
   }
 }
