--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,11 @@
     "artificio-bridge-database": "file:../database",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-query-parser": "^1.3.3",
     "jsonschema": "^1.4.1"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
