--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-query-parser": "^1.3.3",
-    "jsonschema": "^1.4.1"
+    "jsonschema": "^1.4.1",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "jest": "^28.1.3",
