--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -23,6 +23,9 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      
+      - name: Install dependencies for common
+        run: cd common && npm ci
 
       - name: Install dependencies for database
         run: cd database && npm ci
