--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -2,8 +2,9 @@ name: Bridge API test
 on: push
 
 jobs:
-  runner-job:
+  api-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     services:
       postgres:
         image: postgres
