rename to halfmoon-cross

--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "artificio-bridge-common",
+  "name": "halfmoon-cross-bridge-common",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
