--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "artificio-bridge-api",
+  "name": "halfmoon-cross-bridge-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "artificio-bridge-common": "file:../common",
-    "artificio-bridge-database": "file:../database",
+    "halfmoon-cross-bridge-common": "file:../common",
+    "halfmoon-cross-bridge-database": "file:../database",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-query-parser": "^1.3.3",
